force-app/main/default/objects/Personal_Discussion__c/Personal_Discussion__c.object-meta.xml
<CustomObject>
    <label>Personal Discussion</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Discussion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>