force-app/main/default/objects/Personal_Discussion__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Personal Discussion</relationshipLabel>
    <relationshipName>Personal_Discussion</relationshipName>
    <type>Lookup</type>
</CustomField>