force-app/main/default/objects/Personal_Discussion__c/fields/Type_of_PD__c.field-meta.xml
<CustomField>
    <fullName>Type_of_PD__c</fullName>
    <label>Type of PD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>